--- a/.github/workflows/gpu-testing-hdfml.yaml
+++ b/.github/workflows/gpu-testing-hdfml.yaml
@@ -9,7 +9,7 @@ jobs:
     strategy:
       matrix:
         processes: [1, 2, 3]
-        gpus: [1, 2, 3, 4]
+        gpus: [1, 2, 4]
         exclude:
           - processes: 2
             gpus: 1
